# document-table-extract

./: .gitignore  SETUP-LINUX.md  SETUP.md
backend/: .env.example  pyproject.toml
backend/app/: batch_store.py  benchmark_analyzer.py  benchmark_store.py  config.py  document_store.py  llm_io.py  main.py  pii_dataset_runner.py  pii_runner.py  pii_v2_dataset_store.py  pii_v2_manual_store.py  pii_v2_store.py  review_store.py  run_store.py
backend/app/bpmn/: camelot_lattice.bpmn  camelot_stream.bpmn  camelot_vector.bpmn  claude_vision.bpmn  deepdoc_baseline.bpmn  deepdoc_doctr.bpmn  deepdoc_easyocr.bpmn  deepdoc_paddle.bpmn  deepdoc_tesseract.bpmn  docling.bpmn  docling_doctr.bpmn  docling_rapidocr.bpmn  docling_tesseract.bpmn  docling_trocr_handwritten.bpmn  doctr_baseline.bpmn  easyocr_baseline.bpmn  gemini_vision.bpmn  generator.py  img2table_doctr.bpmn  img2table_easyocr.bpmn  img2table_paddle.bpmn  img2table_tesseract.bpmn  layout_parser.bpmn  layout_parser_pdf.bpmn  master_pipeline.bpmn  native_pdfplumber.bpmn  native_pymupdf.bpmn  ocr_tesseract_baseline.bpmn  openai_vision.bpmn  opencv_tesseract.bpmn  paddle_structure.bpmn  paddleocr_baseline.bpmn  tabula_lattice.bpmn  tabula_stream.bpmn  tabula_vector.bpmn  trocr_handwritten.bpmn  trocr_printed.bpmn
backend/app/core/: confidence.py  geometry.py  pdf_kind.py  rasterize.py  schemas.py
backend/app/pii_v2/: __init__.py  annotation_processor.py  audit.py  base.py  categories.py  evaluators.py  masking.py  merger.py  normalizer.py  post_process.py  registry.py  risk.py  schema.py  subprocess_detector.py  text_layout.py  visual_extractor.py
backend/app/pii_v2/detectors/: __init__.py  gliner_detector.py  hybrid_detector.py  piiranha_detector.py  presidio_regex_detector.py  presidio_spacy_detector.py
backend/app/pii_v2/extras/: __init__.py
backend/app/pii_v2/jurisdictions/: __init__.py  base.py
backend/app/pii_v2/jurisdictions/global_common/: __init__.py  validators.py
backend/app/pii_v2/jurisdictions/uk/: __init__.py  validators.py
backend/app/pii_v2/jurisdictions/user_custom/: __init__.py
backend/app/pii_v2/redaction/: __init__.py  _fallback_names.py  image_redactor.py  mapping.py  mock_generators.py  redactor.py  text_redactor.py
backend/app/pipeline/: base.py  context.py  isolation.py  runner.py  scheduler.py  ssl_env.py
backend/app/report/: builder.py
backend/app/report/templates/: report.html.j2
backend/app/routes/: batches.py  benchmarks.py  bpmn.py  documents.py  pii_benchmarks.py  pii_dataset_benchmarks.py  report.py  reviews.py  runs.py  solutions.py
backend/app/solutions/: __init__.py  camelot_lattice.py  camelot_stream.py  camelot_vector.py  claude_vision.py  deepdoc_baseline.py  deepdoc_doctr.py  deepdoc_easyocr.py  deepdoc_paddle.py  deepdoc_tesseract.py  docling_doctr.py  docling_rapidocr.py  docling_solution.py  docling_tesseract.py  docling_trocr_handwritten.py  doctr_baseline.py  easyocr_baseline.py  gemini_vision.py  img2table.py  img2table_doctr.py  img2table_easyocr.py  img2table_paddle.py  img2table_tesseract.py  layout_parser.py  layout_parser_pdf.py  native_pdfplumber.py  native_pymupdf.py  ocr_tesseract_baseline.py  openai_vision.py  opencv_tesseract.py  paddle_structure.py  paddleocr_baseline.py  tabula_lattice.py  tabula_stream.py  tabula_vector.py  trocr_handwritten.py  trocr_printed.py
backend/app/stages/: docling_stage.py  native_pdfplumber.py  native_pymupdf.py  preprocess_opencv.py  tables_camelot.py  tables_img2table.py  tables_tabula.py
backend/app/stages/annotate/: render.py
backend/app/stages/layout/: custom_table.py  doc_format.py  heuristic.py  layout_parser_pdf_stage.py  layout_parser_stage.py  table_crop.py  table_obfuscate.py
backend/app/stages/ocr/: deepdoc_adapters.py  deepdoc_stage.py  doctr_stage.py  easyocr_stage.py  paddleocr_stage.py  tesseract.py  trocr_stage.py
backend/app/stages/pii/: presidio.py
backend/app/stages/vision/: claude_vision.py  gemini_vision.py  openai_vision.py  paddle_structure.py
backend/app/workers/: _docling_post_ocr.py  _io.py  camelot_worker.py  deepdoc_worker.py  docling_worker.py  doctr_worker.py  easyocr_worker.py  img2table_worker.py  layout_parser_pdf_worker.py  layout_parser_worker.py  paddle_structure_worker.py  paddleocr_worker.py  pii_gliner_worker.py  pii_piiranha_worker.py  tabula_worker.py  trocr_worker.py
backend/app/workflow/: db.py  engine.py
backend/scripts/: generate_pii_dataset.py  prefetch_pii_models.py  run_pii_benchmark.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/batches/[batchId]/: page.tsx
frontend/app/benchmarks/: page.tsx
frontend/app/benchmarks/[id]/: page.tsx
frontend/app/guide/: page.tsx
frontend/app/pii-benchmarks/: page.tsx
frontend/components/: AnnotatedImageViewer.tsx  AuditTimeline.tsx  BpmnViewer.tsx  BpmnViewerCard.tsx  CustomTablePanel.tsx  Dashboard.tsx  FeatureRegionsPanel.tsx  FlowSelector.tsx  Mermaid.tsx  PdfUploader.tsx  PiiAuditTimeline.tsx  PiiBenchmarkGrid.tsx  PiiBenchmarkSection.tsx  PiiCapabilityModal.tsx  PiiCardDetailPanel.tsx  PiiCardImageModal.tsx  PiiOccurrenceList.tsx  PiiPanel.tsx  PiiSidePanel.tsx  RecentRunsTable.tsx  RegionTable.tsx  RunBpmnSection.tsx  SolutionCompareGrid.tsx  SolutionPicker.tsx  TableCellView.tsx  TableCropPanel.tsx  TableWithCoordsToggle.tsx  ZoomableImage.tsx
frontend/lib/: api.ts  coords.ts  solutionDocs.ts  types.ts
(+9 files in other folders)
